Fixed code blocks not wrapping

--- a/src/styles/prism-darcula.css
+++ b/src/styles/prism-darcula.css
@@ -14,9 +14,9 @@ pre[class*="language-"] {
   font-family: Consolas, Monaco, "Andale Mono", monospace;
   direction: ltr;
   text-align: left;
-  white-space: pre;
+  white-space: break-spaces;
   word-spacing: normal;
-  word-break: normal;
+  word-break: break-word;
   line-height: 1.5;
 
   -moz-tab-size: 4;
@@ -49,7 +49,8 @@ code[class*="language-"] ::selection {
 pre[class*="language-"] {
   padding: 1em;
   margin: auto 0;
-  overflow: auto;
+  overflow: scroll;
+  max-height: 80vh;
 }
 
 :not(pre) > code[class*="language-"],
